Fixed #811 - Examples not working on Firefox (content row doesn't get the whole size)

--- a/src/utils/vertical-container.scss
+++ b/src/utils/vertical-container.scss
@@ -7,6 +7,7 @@
 
 .svd-vertical-container__row {
     width: 100%;
+    height: 100%;
     display: table-row;
     &:first-child {
         height: 0;
